add : swagger implementation forAll API
